--- a/project.html
+++ b/project.html
@@ -48,7 +48,7 @@
 											<li><a href="index.html">HOME</a></li>
 											<li><a href="study.html">STUDY</a></li>
 											<li class="active"><a href="project.html">PROJECT</a></li>
-											<li><a href="groupdiary.html">GROUP DIARY</a></li>
+											<li><a href="groupDiary.html">GROUP DIARY</a></li>
 											<li><a href="styleGuide.html">STYLE GUIDE</a></li>
 											<li><a href="result.html">RESULT</a></li>
 											<li><a href="about.html">ABOUT</a></li>
