--- a/about.html
+++ b/about.html
@@ -40,8 +40,8 @@
                     <li><a href="study.html">STUDY</a></li>
                     <li><a href="project.html">PROJECT</a></li>
                     <li><a href="groupDiary.html">GROUP DIARY</a></li>
-                    <li><a href="#">STYLE GUIDE</a></li>
-                    <li><a href="#">RESULT</a></li>
+                    <li><a href="styleGuide.html">STYLE GUIDE</a></li>
+                    <li><a href="result.html">RESULT</a></li>
                     <li class="active"><a href="about.html">ABOUT</a></li>
 
                   </ul>
