--- a/result.html
+++ b/result.html
@@ -94,7 +94,7 @@
 								  <p><a href="https://hci2019group10.tk/" target="blank">- Trang home</a></p>
 								  <p><a href="https://hci2019group10.tk/result.html" target="blank">- Trang result</a></p>
 								  <h4>Đánh giá</h4>        
-								  <p>- Hòan thành: 100%</p>
+								  <p>- Hoàn thành: 100%</p>
 								  <p>- Đóng góp: 20%</p>
 							</div>
 							<div class="col-sm-3">
@@ -106,7 +106,7 @@
 								  <h4>Web nhóm</h4>
 								  <p><a href="https://hci2019group10.tk/about.html" target="blank">- Trang about</a></p>
 								  <h4>Đánh giá</h4>        
-								  <p>- Hòan thành: 100%</p>
+								  <p>- Hoàn thành: 100%</p>
 								  <p>- Đóng góp: 20%</p>
 							</div>
 							<div class="col-sm-3">
@@ -118,7 +118,7 @@
 								  <h4>Web nhóm</h4>
 								  <p><a href="https://hci2019group10.tk/groupDiary.html" target="blank">- Trang group diary</a></p>
 								  <h4>Đánh giá</h4>        
-								  <p>- Hòan thành: 100%</p>
+								  <p>- Hoàn thành: 100%</p>
 								  <p>- Đóng góp: 20%</p>
 							</div>
 							<div class="col-sm-3">
@@ -130,7 +130,7 @@
 								  <h4>Web nhóm</h4>
 								  <p><a href="https://hci2019group10.tk/project.html" target="blank">- Trang project</a></p>
 								  <h4>Đánh giá</h4>        
-								  <p>- Hòan thành: 100%</p>
+								  <p>- Hoàn thành: 100%</p>
 								  <p>- Đóng góp: 20%</p>
 							</div>
 							<div class="col-sm-3" style="">
@@ -142,7 +142,7 @@
 								  <h4>Web nhóm</h4>
 								  <p><a href="https://hci2019group10.tk/study.html" target="blank">- Trang study</a></p>
 								  <h4>Đánh giá</h4>        
-								  <p>- Hòan thành: 100%</p>
+								  <p>- Hoàn thành: 100%</p>
 								  <p>- Đóng góp: 20%</p>
 							</div>
 						  </div>
