--- a/project.html
+++ b/project.html
@@ -18,7 +18,7 @@
 	<link rel="stylesheet" href="css/magnific-popup.css">
 	<link rel="stylesheet" href="style.css">
 	<link rel="stylesheet" href="responsive.css">
-	<link rel="stylesheet" href="styleTest.css">
+	<link rel="stylesheet" href="project.css">
 	<link href="https://fonts.googleapis.com/css?family=Roboto"
 		  rel="stylesheet">
 
